# memetrics

./: .editorconfig  .gitignore  README.md  client.env  requirements.txt  setup.py
.github/workflows/: dev-deploy-osf.yml  dev-deploy.yml  osf-prod-deploy.yml  prod-deploy.yml  test-api.yml
api/: .env.example  .env.test  Dockerfile  README.md  requirements-teia.txt  requirements.txt  setup.py
api/memetrics/: __main__.py  app.py  dependencies.py  settings.py  utils.py
api/tests/: conftest.py  test_eggregations.py  test_events.py  test_events_get.py
events/: events.ts  melting-face.md
memetrics-api/memetrics/: settings.py
memetrics-sdk-py/: README.md  requirements.txt  setup.py
memetrics-sdk-py/memetrics_sdk/: lambda.py
migrations/: athena-user.py  create-events_per_user.py  download-from-mongo.py  eggregation-correctness.py  gap-cleanup.py  memetrics-checkup.py  migrate-athena.py  migrate_vs_code.py  move-events.py  move-events_per_user.py  rename-vscode-events.mongodb.js  vscode-dump-to-meme.py  vscode-meme-to-meme.py  vscode-wingman_event-names.json
migrations/views/: athena-flat.py  athena-orgs-flat.py  chrome-flat.py  code-flat.py  devops-flat.py  jira-flat.py
py-sdk/: client.env  example.py  requirements-teia.txt  requirements.txt  setup.py
schemas/: pyproject.toml  requirements.txt  setup.py
schemas/memetrics_schemas/: __init__.py  object_id.py  pydantic_1.py  pydantic_2.py  pydantic_n.py
scripts/: requirements.txt  schema-insert.py  update_employee_status.py
ts-sdk/: package.json  tsconfig.json
utils/: README.md  setup.py
(+41 files in other folders)
